text-overflow fix?

--- a/css/dark4.css
+++ b/css/dark4.css
@@ -1589,7 +1589,7 @@ textarea.c-input_textarea.c-input_textarea--with_hint {
 
 .p-channel_sidebar__name {
     color: white;
-    overflow: inherit !important;
+    overflow: inherit;
     text-overflow: ellipsis;
 }
 
